--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,16 @@
-# Compiled class file
-*.class
-
-# Log file
+*.iml
+target/
+/.settings/
+/.classpath
+/.project
+.arcconfig
+.DS_Store
+.idea
+.idea/*
+access/
+src/.DS_Store
+src/main/.DS_Store
+src/main/resources/.DS_Store
+data/
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+.flattened-pom.xml
