--- a/hotdog-saas-application/pom.xml
+++ b/hotdog-saas-application/pom.xml
@@ -20,6 +20,21 @@
             <version>${revision}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.hotdog.saas</groupId>
+            <artifactId>hotdog-saas-infra</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
