--- a/hotdog-saas-web/pom.xml
+++ b/hotdog-saas-web/pom.xml
@@ -21,14 +21,13 @@
         </dependency>
 
         <dependency>
-            <groupId>com.hotdog.saas</groupId>
-            <artifactId>hotdog-saas-infra</artifactId>
-            <version>${revision}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
     </dependencies>
 
