1. 数据库升级模块 2. 整合接口文档

--- a/hotdog-saas-start/pom.xml
+++ b/hotdog-saas-start/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
+        <!-- idea监控 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
 
