--- a/hotdog-saas-start/src/main/resources/bootstrap.yml
+++ b/hotdog-saas-start/src/main/resources/bootstrap.yml
@@ -30,6 +30,9 @@ spring:
           min-idle: 1
           max-wait: -1
 
+knife4j:
+  enable: true
+
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
