签名验证拦截器

--- a/hotdog-saas-start/src/main/resources/bootstrap.yml
+++ b/hotdog-saas-start/src/main/resources/bootstrap.yml
@@ -1,6 +1,9 @@
 project:
   version: @project.version@
   database: mysql
+  secret: 1234567890abcdef
+  valid:
+    sign: true
 
 server:
   port: 12306
