--- a/hotdog-saas-infra/pom.xml
+++ b/hotdog-saas-infra/pom.xml
@@ -27,6 +27,11 @@
 
         <dependency>
             <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-jsqlparser</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
         </dependency>
 
