--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <knife4j.version>4.5.0</knife4j.version>
         <slf4j.version>2.0.16</slf4j.version>
         <logback.version>1.5.12</logback.version>
+        <fastjson.version>2.0.53</fastjson.version>
     </properties>
 
     <dependencyManagement>
@@ -158,6 +159,12 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
