--- a/hotdog-saas-domain/pom.xml
+++ b/hotdog-saas-domain/pom.xml
@@ -48,6 +48,11 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
