--- a/hotdog-saas-tob/hotdog-saas-infra/pom.xml
+++ b/hotdog-saas-tob/hotdog-saas-infra/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>${jwt.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-3-starter</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
