--- a/hotdog-saas-tob/hotdog-saas-start/src/main/resources/bootstrap.yml
+++ b/hotdog-saas-tob/hotdog-saas-start/src/main/resources/bootstrap.yml
@@ -20,10 +20,29 @@ spring:
     nacos:
       server-addr: 124.221.85.208:8848
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://124.221.85.208:3306/hotdog-saas?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-    username: root
-    password: cyfe67373
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      url: jdbc:mysql://124.221.85.208:3306/hotdog-saas?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+      username: root
+      password: cyfe67373
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      max-wait: 30000
+      test-while-idle: true
+      time-between-eviction-runs-millis: 30000
+      min-evictable-idle-time-millis: 30000
+      validation-query: select 1
+      test-on-borrow: true
+      test-on-return: true
+      pool-prepared-statements: false
+      max-pool-prepared-statement-per-connection-size: -1
+      use-global-data-source-stat: true
+      stat-view-servlet:
+        enabled: true
+        url-pattern: /druid/*
+
   data:
     redis:
       host: 124.221.85.208
