--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <mybatis-plus.version>3.5.9</mybatis-plus.version>
         <velocity.version>2.3</velocity.version>
         <mysql.version>8.0.22</mysql.version>
+        <druid.version>1.2.24</druid.version>
         <redis.version>3.40.0</redis.version>
         <mapstruct.version>1.6.3</mapstruct.version>
         <apache.version>3.17.0</apache.version>
@@ -125,6 +126,13 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
+            </dependency>
+
+            <!-- druid -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-3-starter</artifactId>
+                <version>${druid.version}</version>
             </dependency>
 
             <!-- redis -->
