--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <fastjson.version>2.0.53</fastjson.version>
         <jwt.version>0.12.6</jwt.version>
         <guava.version>33.3.1-jre</guava.version>
+        <kafka.version>3.3.0</kafka.version>
     </properties>
 
     <dependencyManagement>
@@ -206,6 +207,12 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>${kafka.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
