--- a/hotdog-saas-tob/hotdog-saas-domain/pom.xml
+++ b/hotdog-saas-tob/hotdog-saas-domain/pom.xml
@@ -64,6 +64,11 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
