--- a/hotdog-saas-tob/hotdog-saas-start/src/main/resources/bootstrap.yml
+++ b/hotdog-saas-tob/hotdog-saas-start/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ project:
   file: minio
   secret: 1234567890abcdef
   valid:
-    sign: false
+    sign: true
     token: false
   jwt:
     subject: HDOG-SAAS
